13136 FIX SLA View: Displaced timelines
The timelines in SLA views were displaced.
First of all the Availability timeline was shifted to the right
and all other timelines would not line up with the result row

SUP-3068

--- a/web/htdocs/themes/facelift/scss/_variables_common.scss
+++ b/web/htdocs/themes/facelift/scss/_variables_common.scss
@@ -58,6 +58,7 @@ $menu-item-spacing: (2.2 * $spacing);
 $theme-border-radius: 4px;
 $single-column-mega-menu-width: 340px;
 $theme-snapin-width: 240px;
+$timerange-width: 800px;
 /* TODO: There are two implementations of toggle switches. One in _wato.scss
  * and one in _main.scss. Can we use just one implementation?
 */
