--- a/web/htdocs/themes/facelift/scss/_views.scss
+++ b/web/htdocs/themes/facelift/scss/_views.scss
@@ -853,6 +853,10 @@ table.timeline {
   }
 }
 
+div.sla_timerange {
+  width: $timerange-width;
+}
+
 div.timelinerange {
   position: relative;
   float: none;
@@ -860,7 +864,7 @@ div.timelinerange {
 
   div {
     float: left;
-    width: 300px;
+    width: ($timerange-width * 0.5);
 
     /* We render the small vertical lines in a way that only
        the left border is visible but the thing is thick 5 pixels.
